--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -12,8 +12,16 @@ html {
 }
 
 body {
-  font-size: 1.6rem;
+  font-size: 1.8rem;
   font-family: "Public Sans", sans-serif;
   font-weight: 400;
   line-height: 1.7;
+}
+
+a:link,
+a:visited {
+  text-decoration: none;
+}
+ul {
+  list-style: none;
 }
