--- a/css/style.css
+++ b/css/style.css
@@ -20,8 +20,7 @@ html {
 
 body {
   font-size: 1.8rem;
-  font-family: "Public Sans", sans-serif;
-  font-weight: 400;
+  font-family: 'Public Sans', sans-serif;
   line-height: 1.7; }
 
 a:link,
@@ -30,6 +29,10 @@ a:visited {
 
 ul {
   list-style: none; }
+
+.heading-primary {
+  font-weight: 400;
+  color: var(--Dark-Blue); }
 
 .nav__link {
   transition: all 0.1s; }
@@ -51,25 +54,46 @@ ul {
   transition: all 0.2s; }
   .btn:hover {
     transform: translateY(-0.1rem);
-    opacity: 0.7; }
+    opacity: 0.8; }
   .btn:active {
     transform: translateY(0.1rem); }
 
 .header {
-  padding: 0 3rem;
   height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   background-color: var(--White); }
   .header .nav {
-    padding: 0 8rem;
+    min-height: 8rem;
+    padding: 0 15rem;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    width: 100%;
-    height: 8rem; }
+    width: 100%; }
     .header .nav__links {
       display: flex; }
       .header .nav__links > :not(:last-child) {
         margin-right: 3rem; }
+  .header__box {
+    display: flex;
+    align-items: center;
+    overflow-x: hidden; }
+  .header__title {
+    flex: 1 0 50%;
+    padding: 0 15rem;
+    display: grid;
+    justify-items: start;
+    grid-row-gap: 2rem; }
+  .header__img-box {
+    flex: 1 0 50%;
+    position: relative; }
+  .header__img--below {
+    width: 100%;
+    transform: scale(1.5, 1.5) translate(8.5rem, -3rem); }
+  .header__img--upper {
+    position: absolute;
+    top: 39%;
+    left: 58%;
+    transform: scale(0.8, 0.8) translate(-50%, -50%);
+    z-index: 10; }
