--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -1,27 +1,26 @@
 *,
 *::before,
 *::after {
-  padding: 0;
-  margin: 0;
-  box-sizing: inherit;
+	padding: 0;
+	margin: 0;
+	box-sizing: inherit;
 }
 
 html {
-  box-sizing: border-box;
-  font-size: 62.5%;
+	box-sizing: border-box;
+	font-size: 62.5%;
 }
 
 body {
-  font-size: 1.8rem;
-  font-family: "Public Sans", sans-serif;
-  font-weight: 400;
-  line-height: 1.7;
+	font-size: 1.8rem;
+	font-family: 'Public Sans', sans-serif;
+	line-height: 1.7;
 }
 
 a:link,
 a:visited {
-  text-decoration: none;
+	text-decoration: none;
 }
 ul {
-  list-style: none;
+	list-style: none;
 }
