--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,22 +1,52 @@
 .header {
-	padding: 0 3rem;
 	height: 100vh;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
 	background-color: var(--White);
+
 	.nav {
-		padding: 0 8rem;
+		min-height: 8rem;
+		padding: 0 15rem;
 		display: flex;
 		justify-content: space-between;
 		align-items: center;
 		width: 100%;
-		height: 8rem;
+
 		&__links {
 			display: flex;
 			& > :not(:last-child) {
 				margin-right: 3rem;
 			}
 		}
+	}
+
+	&__box {
+		display: flex;
+		align-items: center;
+		overflow-x: hidden;
+	}
+
+	&__title {
+		flex: 1 0 50%;
+		padding: 0 15rem;
+		display: grid;
+		justify-items: start;
+		grid-row-gap: 2rem;
+	}
+	&__img-box {
+		flex: 1 0 50%;
+		position: relative;
+	}
+	&__img--below {
+		width: 100%;
+		transform: scale(1.5, 1.5) translate(8.5rem, -3rem);
+	}
+	&__img--upper {
+		position: absolute;
+		top: 39%;
+		left: 58%;
+		transform: scale(0.8, 0.8) translate(-50%, -50%);
+		z-index: 10;
 	}
 }
