--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -5,26 +5,12 @@
 	align-items: center;
 	background-color: var(--White);
 
-	.nav {
-		min-height: 8rem;
-		padding: 0 15rem;
-		display: flex;
-		justify-content: space-between;
-		align-items: center;
-		width: 100%;
-
-		&__links {
-			display: flex;
-			& > :not(:last-child) {
-				margin-right: 3rem;
-			}
-		}
-	}
-
 	&__box {
 		display: flex;
 		align-items: center;
-		overflow-x: hidden;
+		overflow: hidden;
+		background-color: var(--Very-Light-Gray);
+		height: 88vh;
 	}
 
 	&__title {
