--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,15 +1,16 @@
-@import "abstracts/functions";
-@import "abstracts/mixins";
-@import "abstracts/variables.scss";
+@import 'abstracts/functions';
+@import 'abstracts/mixins';
+@import 'abstracts/variables.scss';
 
+@import 'base/animations.scss';
+@import 'base/base';
+@import 'base/typography';
+@import 'base/utilities';
 
-@import "base/animations.scss";
-@import "base/base";
-@import "base/typography";
-@import "base/utilities";
+@import 'components/feature-boxes';
+@import 'components/buttons';
 
-@import "components/buttons";
+@import 'layout/header';
+@import 'layout/navigation';
 
-@import "layout/header";
-
-@import "pages/home";
+@import 'pages/home';
