Finish article section

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -8,6 +8,7 @@
 @import 'base/utilities';
 
 @import 'components/feature-boxes';
+@import 'components/article';
 @import 'components/buttons';
 
 @import 'layout/header';
