--- a/css/style.css
+++ b/css/style.css
@@ -30,6 +30,9 @@ a:visited {
 ul {
   list-style: none; }
 
+p {
+  color: var(--Grayish-Blue); }
+
 .heading-primary,
 .heading-secondary,
 .heading-tertiary {
@@ -38,27 +41,61 @@ ul {
   line-height: 1.2; }
 
 .paragraph {
-  color: var(--Grayish-Blue);
   font-size: 1.4rem; }
   .paragraph__sub {
     font-size: 1.2rem; }
 
 .features {
-  padding: 8rem 18rem;
+  padding: 8rem 14rem;
   background-color: var(--Light-Grayish-Blue); }
   .features__title {
     width: 50%;
     margin-bottom: 5rem; }
   .features__boxes {
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(20rem, 1fr));
-    grid-gap: 6rem; }
+    grid-template-columns: repeat(auto-fill, minmax(23rem, 1fr));
+    grid-gap: 3rem; }
   .features__box {
     display: flex;
     flex-direction: column;
     align-items: flex-start; }
     .features__box > :not(:last-child) {
       margin-bottom: 2rem; }
+
+.article {
+  padding: 8rem 14rem;
+  background-color: var(--Very-Light-Gray); }
+  .article > :first-child {
+    margin-bottom: 4rem; }
+  .article__boxes {
+    display: grid;
+    grid-template-rows: repeat(auto-fill, minmax(35rem, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(23rem, 1fr));
+    grid-gap: 3rem; }
+  .article__box {
+    display: flex;
+    flex-direction: column;
+    height: 100%; }
+  .article__img {
+    border-radius: 1rem 1rem 0 0;
+    width: 100%;
+    height: 18rem; }
+  .article__title-box {
+    background-color: var(--White);
+    padding: 3rem;
+    border-radius: 0 0 1rem 1rem;
+    height: 100%; }
+    .article__title-box > :not(:last-child) {
+      margin-bottom: 1rem; }
+  .article__writer {
+    font-size: 0.9rem; }
+  .article__title:visited, .article__title:link {
+    display: block;
+    font-weight: 400;
+    color: var(--Dark-Blue);
+    line-height: 1.2; }
+  .article__text {
+    font-size: 1.2rem; }
 
 .nav__link {
   transition: all 0.1s; }
