--- a/sass/components/_article.scss
+++ b/sass/components/_article.scss
@@ -18,15 +18,16 @@
 		height: 100%;
 	}
 	&__img {
-		border-radius: 1rem 1rem 0 0;
+		border-radius: 0.5rem 0.5rem 0 0;
+		aspect-ratio: 2/1.5;
+		object-fit: cover;
 		width: 100%;
-		height: 18rem;
 	}
 
 	&__title-box {
 		background-color: var(--White);
 		padding: 3rem;
-		border-radius: 0 0 1rem 1rem;
+		border-radius: 0 0 0.5rem 0.5rem;
 		height: 100%;
 		& > :not(:last-child) {
 			margin-bottom: 1rem;
@@ -38,12 +39,18 @@
 	}
 
 	&__title {
+		transition: color 0.2s;
 		&:visited,
 		&:link {
 			display: block;
 			font-weight: 400;
 			color: var(--Dark-Blue);
 			line-height: 1.2;
+		}
+
+		&:hover,
+		&:active {
+			color: var(--Lime-Green);
 		}
 	}
 
