--- a/sass/abstracts/_mixins.scss
+++ b/sass/abstracts/_mixins.scss
@@ -1,3 +1,65 @@
-@mixin section-padding {
-	padding: 8rem 14rem;
+@mixin section-padding($t-b) {
+	padding: $t-b 15rem;
+
+	@include respond(tab-land) {
+		padding: $t-b 12rem;
+	}
+	@include respond(tab-port) {
+		padding: $t-b 8rem;
+	}
+	@include respond(phone) {
+		padding: $t-b 5rem;
+	}
+	@include respond(desktop) {
+		padding: $t-b 19rem;
+	}
+	@include respond(big-desktop) {
+		padding: $t-b 24rem;
+	}
+}
+
+// MEDIA QUERY MANAGER
+/*
+0 - 600px:      Phone
+600 - 900px:    Tablet portrait
+900 - 1200px:   Tablet landscape
+[1200 - 1800] is where our normal styles apply
+1800px + :      Big desktop
+
+$breakpoint argument choices:
+- phone
+- tab-port
+- tab-land
+- big-desktop
+
+ORDER: Base + typography > general layout + grid > page layout > components
+
+1em = 16px
+*/
+@mixin respond($breakpoint) {
+	@if $breakpoint == phone {
+		@media only screen and (max-width: 37.5em) {
+			@content;
+		} //600px
+	}
+	@if $breakpoint == tab-port {
+		@media only screen and (max-width: 48em) {
+			@content;
+		} //768px
+	}
+	@if $breakpoint == tab-land {
+		@media only screen and (max-width: 75em) {
+			@content;
+		} //1200px
+	}
+	@if $breakpoint == desktop {
+		@media only screen and (min-width: 93.75em) {
+			@content;
+		} //1500
+	}
+	@if $breakpoint == big-desktop {
+		@media only screen and (min-width: 112.5em) {
+			@content;
+		} //1800
+	}
 }
