--- a/sass/components/_buttons.scss
+++ b/sass/components/_buttons.scss
@@ -1,22 +1,40 @@
+button {
+	border: none;
+	background-color: var(--White);
+}
 .nav__link {
 	transition: all 0.1s;
 	&:visited,
 	&:link {
 		font-size: 1.4rem;
 		color: var(--Grayish-Blue);
+		@include respond(phone) {
+			font-size: 1.8rem;
+			color: var(--Dark-Blue);
+		}
 	}
 	&:hover,
 	&:active {
 		color: var(--Dark-Blue);
 		border-bottom: 0.2rem solid var(--Lime-Green);
 		padding-bottom: 0.8rem;
+		@include respond(phone) {
+			color: var(--Grayish-Blue);
+		}
+	}
+}
+
+.nav__menu {
+	display: none;
+	@include respond(phone) {
+		display: block;
 	}
 }
 
 .btn {
+	font-size: 1.4rem;
 	padding: 1.5rem 3rem;
 	color: var(--White);
-	border: none;
 	border-radius: 3rem;
 	cursor: pointer;
 	background-image: linear-gradient(
