--- a/sass/components/_feature-boxes.scss
+++ b/sass/components/_feature-boxes.scss
@@ -1,10 +1,13 @@
 .features {
-	@include section-padding;
+	@include section-padding(8rem);
 	background-color: var(--Light-Grayish-Blue);
 
 	&__title {
 		width: 50%;
 		margin-bottom: 5rem;
+		@include respond(phone) {
+			width: 100%;
+		}
 	}
 
 	&__boxes {
@@ -17,6 +20,9 @@
 		display: flex;
 		flex-direction: column;
 		align-items: flex-start;
+		@include respond(phone) {
+			align-items: center;
+		}
 		& > :not(:last-child) {
 			margin-bottom: 2rem;
 		}
