--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -1,14 +1,27 @@
 .footer {
-	padding: 4rem 15rem;
+	@include section-padding(4rem);
 	background-color: var(--Dark-Blue);
 	display: flex;
 	align-items: center;
 	justify-content: space-between;
-	height: 25vh;
+	height: 16rem;
+
+	@include respond(phone) {
+		height: 50rem;
+		flex-direction: column;
+		& > :not(:last-child) {
+			margin-bottom: 2rem;
+		}
+	}
 
 	&__links {
 		display: grid;
 		grid-template-columns: repeat(2, 10rem);
+		@include respond(phone) {
+			grid-template-columns: 14rem;
+			justify-items: center;
+			grid-row-gap: 1rem;
+		}
 	}
 
 	&__link {
@@ -17,6 +30,9 @@
 		&:visited {
 			font-size: 1.4rem;
 			color: var(--Grayish-Blue);
+			@include respond(phone) {
+				font-size: 1.6rem;
+			}
 		}
 
 		&:hover,
@@ -30,6 +46,9 @@
 		flex-direction: column;
 		align-items: flex-end;
 		height: 100%;
+		@include respond(phone) {
+			align-items: center;
+		}
 
 		& > :first-child {
 			margin-bottom: 1rem;
@@ -41,9 +60,15 @@
 	display: flex;
 	flex-direction: column;
 	height: 100%;
+	@include respond(phone) {
+		align-items: center;
+	}
 
 	& > :first-child {
 		margin-bottom: 3rem;
+		@include respond(phone) {
+			margin-bottom: 2rem;
+		}
 	}
 
 	&__box {
