--- a/sass/layout/_navigation.scss
+++ b/sass/layout/_navigation.scss
@@ -1,15 +1,41 @@
 .nav {
-	min-height: 12vh;
-	padding: 0 15rem;
+	min-height: 7rem;
+	@include section-padding(0);
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
 	width: 100%;
-
+	z-index: 10;
+	background-color: var(--White);
+	&__btn {
+		@include respond(phone) {
+			display: none;
+		}
+	}
 	&__links {
 		display: flex;
+
+		@include respond(phone) {
+			display: none;
+			position: absolute;
+			flex-direction: column;
+			align-items: center;
+			justify-content: space-between;
+			top: 50%;
+			left: 50%;
+			transform: translate3d(-50%, -110%, 0);
+			background-color: var(--White);
+			width: 90%;
+			height: 25rem;
+			padding: 2rem 0;
+			border-radius: 0.5rem;
+			transition: all 0.4s ease-in-out;
+		}
 		& > :not(:last-child) {
 			margin-right: 3rem;
+			@include respond(phone) {
+				margin-right: 0;
+			}
 		}
 	}
 }
